--- a/config.json
+++ b/config.json
@@ -1,21 +1,21 @@
 {
   "force": false,
   "address": "0.0.0.0",
-  "port": $PORT,
+  "port": "$PORT",
   "jwt_secret": "random generated",
   "token_expires_in": 48,
   "site_url": "",
-  "cdn": $CDN,
+  "cdn": "$CDN",
   "database": {
-    "type": $DB_TYPE,
-    "host": $DB_HOST,
-    "port": $DB_PORT,
-    "user": $DB_USER,
-    "password": $DB_PASS,
-    "name": $DB_NAME,
-    "db_file": $DB_FILE,
-    "table_prefix": $DB_PREFIX,
-    "ssl_mode": $DB_SSL
+    "type": "$DB_TYPE",
+    "host": "$DB_HOST",
+    "port": "$DB_PORT",
+    "user": "$DB_USER",
+    "password": "$DB_PASS",
+    "name": "$DB_NAME",
+    "db_file": "$DB_FILE",
+    "table_prefix": "$DB_PREFIX",
+    "ssl_mode": "$DB_SSL"
   },
   "scheme": {
     "https": false,
