--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "jwt_secret": "random generated",
   "token_expires_in": 48,
   "site_url": "",
-  "cdn": "$CDN",
+  "cdn": "",
   "database": {
     "type": "$DB_TYPE",
     "host": "$DB_HOST",
@@ -13,9 +13,8 @@
     "user": "$DB_USER",
     "password": "$DB_PASS",
     "name": "$DB_NAME",
-    "db_file": "$DB_FILE",
     "table_prefix": "$DB_PREFIX",
-    "ssl_mode": "$DB_SSL"
+    "ssl_mode": false
   },
   "scheme": {
     "https": false,
@@ -29,6 +28,6 @@
     "max_size": 10,
     "max_backups": 5,
     "max_age": 28,
-    "compress": false
+    "compress": true
   }
 }
