--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "force": false,
   "address": "0.0.0.0",
-  "port": "{{PORT}}",
+  "port": "5244",
   "jwt_secret": "random generated",
   "token_expires_in": 48,
   "site_url": "",
