--- a/config.json
+++ b/config.json
@@ -2,18 +2,18 @@
   "force": false,
   "address": "0.0.0.0",
   "port": "5244",
-  "jwt_secret": "random generated",
+  "jwt_secret": "",
   "token_expires_in": 48,
   "site_url": "",
-  "cdn": "",
+  "cdn": "https://www.npmjs.com/package/alist-web",
   "database": {
-    "type": "{{DB_TYPE}}",
-    "host": "{{DB_HOST}}",
-    "port": "{{DB_PORT}}",
-    "user": "{{DB_USER}}",
-    "password": "{{DB_PASS}}",
-    "name": "{{DB_NAME}}",
-    "table_prefix": "${{DB_PREFIX}}",
+    "type": "$DB_TYPE",
+    "host": "$DB_HOST",
+    "port": "$DB_PORT",
+    "user": "$DB_USER",
+    "password": "$DB_PASS",
+    "name": "$DB_NAME",
+    "table_prefix": "$DB_PREFIX",
     "ssl_mode": false
   },
   "scheme": {
