--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,33 @@
-1
+{
+  "force": false,
+  "address": "0.0.0.0",
+  "port": "5244",
+  "jwt_secret": "",
+  "token_expires_in": 48,
+  "site_url": "",
+  "cdn": "https://www.npmjs.com/package/alist-web",
+  "database": {
+    "type": "$DB_TYPE",
+    "host": "$DB_HOST",
+    "port": "$DB_PORT",
+    "user": "$DB_USER",
+    "password": "$DB_PASS",
+    "name": "$DB_NAME",
+    "table_prefix": "$DB_PREFIX",
+    "ssl_mode": false
+  },
+  "scheme": {
+    "https": false,
+    "cert_file": "",
+    "key_file": ""
+  },
+  "temp_dir": "data/temp",
+  "log": {
+    "enable": true,
+    "name": "log/log.log",
+    "max_size": 10,
+    "max_backups": 5,
+    "max_age": 28,
+    "compress": true
+  }
+}
