--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "force": true,
   "address": "0.0.0.0",
-  "port": "5244",
+  "port": 5244,
   "jwt_secret": "",
   "token_expires_in": 48,
   "site_url": "",
