--- a/config/config.json
+++ b/config/config.json
@@ -8,13 +8,13 @@
   "cdn": "https://www.npmjs.com/package/alist-web",
   
   "database": {
-    "type": "${DBTYPE}",
-    "host": "${DBHOST}",
+    "type": "#DBTYPE",
+    "host": "#DBHOST",
     "port": 5432,
-    "user": "${DBUSER}",
-    "password": "${DBPASS}",
-    "name": "${DBNAME}",
-    "table_prefix": "${DBPREFIX}",
+    "user": "#DBUSER",
+    "password": "#DBPASS",
+    "name": "#DBNAME"",
+    "table_prefix": "#DBPREFIX",
     "ssl_mode": ""
   },
   "scheme": {
