--- a/config/config.json
+++ b/config/config.json
@@ -8,13 +8,13 @@
   "cdn": "https://www.npmjs.com/package/alist-web",
   
   "database": {
-    "type": "#DBTYPE",
-    "host": "#DBHOST",
+    "type": "process.env.DBTYPE",
+    "host": "process.env.DBHOST",
     "port": 5432,
-    "user": "#DBUSER",
-    "password": "#DBPASS",
-    "name": "#DBNAME",
-    "table_prefix": "#DBPREFIX",
+    "user": "process.env.DBUSER",
+    "password": "process.env.DBPASS",
+    "name": "process.env.DBNAME",
+    "table_prefix": "process.env.DBPREFIX",
     "ssl_mode": ""
   },
   "scheme": {
