--- a/render.yaml
+++ b/render.yaml
@@ -31,6 +31,12 @@ services:
       - key: DB_TABLE_PREFIX
         # value: alist_
         sync: false
-      - key: CDN
+      - key: ASSETS
         # value: https://npm.elemecdn.com/alist-web@$version/dist
+        sync: false
+      - key: CACHE_EXPIRATION
+        # value: 60
+        sync: false
+      - key: CLEANUP_INTERVAL
+        # value: 120
         sync: false
