--- a/render.yaml
+++ b/render.yaml
@@ -34,6 +34,6 @@ services:
       - key: DB_SSL_MODE
         # value: disable
         sync: false
-      - APP_COMMAND:
+      - key: APP_COMMAND
         # value: server
         sync: false
