--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
   "jwt_secret": "",
   "token_expires_in": 48,
   "site_url": "",
-  "cdn": "https://www.npmjs.com/package/alist-web",
+  "cdn": "",
   
   "database": {
     "type": "(process.env.DBTYPE)",
